--- a/client/app/views/demos.html
+++ b/client/app/views/demos.html
@@ -94,7 +94,7 @@ $scope.states = [
 </div>
 <hr>
 <div class="demo" id="2">
-  <h3>2: Remote, Large Date source</h3>
+  <h3>2: Remote, Large Data source</h3>
   <p> 
     This examples demonstrates tagimacating with a lot of records, 5000 to be exact. It doesn't block page load
     by lazy loading data.
